src/objects/Application_Member__c.object
<CustomObject>
    <description>Renamed to Application Household from Household Member on 5/6/16 per client&apos;s feedback and instruction.

Renamed again to Application Member from Application Household on 6/16/16 per client&apos;s feedback and instruction.</description>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Type_Other__c</fullName>
        <label>Alternate Contact Type - Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Type__c</fullName>
        <label>Alternate Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Social Worker or Housing Counselor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Household_Auto_Number__c</fullName>
        <formula>IF( ISBLANK(CreatedDate), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Household Auto Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Members</relationshipLabel>
        <relationshipName>Application_Households</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Candidate_Score__c</fullName>
        <inlineHelpText>Candidate Score</inlineHelpText>
        <label>Candidate Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_WebappID__c</fullName>
        <formula>Contact__r.Webapp_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_WebappID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Members</relationshipLabel>
        <relationshipName>Household_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOB_Text__c</fullName>
        <label>DOB Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Decline to state</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Other__c</fullName>
        <label>Gender - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Trans Male</fullName>
                </value>
                <value>
                    <fullName>Trans Female</fullName>
                </value>
                <value>
                    <fullName>Not Listed</fullName>
                </value>
                <value>
                    <fullName>Decline to State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Alt_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Alt Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_as_Lesbian_Gay_Bisexual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify as Lesbian/Gay/Bisexual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Application_Draft__c</fullName>
        <formula>ISPICKVAL(Application__r.Status__c, &quot;Draft&quot;)</formula>
        <label>Is Application Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_ID__c</fullName>
        <label>Listing ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_with_HIV_AIDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Living with HIV/AIDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>IF(ISBLANK(Mailing_Street__c), &apos;&apos;, Mailing_Street__c + &apos;, &apos; + Mailing_City__c +&apos;, &apos; + Mailing_State__c + &apos;, &apos; + Mailing_Zip_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <inlineHelpText>Example: CA, HI, WA, AZ, NY, WV, etc.</inlineHelpText>
        <label>Mailing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Code__c</fullName>
        <label>Mailing Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>First_Name__c &amp; IF( OR( ISBLANK(First_Name__c), ISBLANK(Middle_Name__c) ) , &apos;&apos;, &apos; &apos;) &amp; Middle_Name__c &amp; IF( OR( ISBLANK(Middle_Name__c), ISBLANK(Last_Name__c) ), &apos;&apos;, &apos; &apos;) &amp; IF( AND( NOT( ISBLANK(First_Name__c) ), ISBLANK(Middle_Name__c), NOT( ISBLANK(Last_Name__c) ) ), &apos; &apos;, &apos;&apos;) &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference_Match__c</fullName>
        <description>Field to determine if neighborhood address was matched by GIS service.</description>
        <label>Neighborhood Preference Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neighborhood Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Language_Other__c</fullName>
        <label>Primary Language - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Cantonese Chinese</fullName>
                </value>
                <value>
                    <fullName>Mandarin Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian/Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaskan Native and Black/African American</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaskan Native and White</fullName>
                </value>
                <value>
                    <fullName>Asian and White</fullName>
                </value>
                <value>
                    <fullName>Black/African American and White</fullName>
                </value>
                <value>
                    <fullName>Other/Multiracial</fullName>
                </value>
                <value>
                    <fullName>Decline to state</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_to_Applicant__c</fullName>
        <label>Relationship to Applicant</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence_Address__c</fullName>
        <formula>IF(ISBLANK(Street__c), &apos;&apos;, Street__c + &apos;, &apos; + City__c +&apos;, &apos; + State__c + &apos;, &apos; + Zip_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residence Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Address_as_Applicant__c</fullName>
        <label>Same Address as Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Phone_Type__c</fullName>
        <label>Second Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Phone__c</fullName>
        <label>Second Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sexual_Orientation_Other__c</fullName>
        <label>Sexual Orientation - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexual_Orientation__c</fullName>
        <label>Sexual Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight/Heterosexual</fullName>
                </value>
                <value>
                    <fullName>Gay</fullName>
                </value>
                <value>
                    <fullName>Lesbian</fullName>
                </value>
                <value>
                    <fullName>Bisexual</fullName>
                </value>
                <value>
                    <fullName>Questioning/Unsure</fullName>
                </value>
                <value>
                    <fullName>Not listed</fullName>
                </value>
                <value>
                    <fullName>Decline to state</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Example: CA, HI, WA, AZ, NY, WV, etc.</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Key__c</fullName>
        <description>this temp key is needed to map relationships in shortform - before there  exists an actual key</description>
        <label>Temp Key</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Applicant</fullName>
                </value>
                <value>
                    <fullName>Alternate Contact</fullName>
                </value>
                <value>
                    <fullName>Household Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_component_of_locator_was_used__c</fullName>
        <inlineHelpText>Which component of locator was used?</inlineHelpText>
        <label>Which component of locator was used?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_in_SF__c</fullName>
        <label>Work in SF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X_Coordinate__c</fullName>
        <inlineHelpText>X Coordinate for Geocode</inlineHelpText>
        <label>X Coordinate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_Coordinate__c</fullName>
        <inlineHelpText>Y Coordinate for Geocode</inlineHelpText>
        <label>Y Coordinate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFiltered__c</fullName>
        <label>isFiltered</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FALSE</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>TRUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_text__c</fullName>
        <label>test text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xNatural_key_test__c</fullName>
        <formula>LOWER(First_Name__c)+ &apos;,&apos; + LOWER(Last_Name__c)+&apos;,&apos; + DOB_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xNatural key test</label>
        <type>Text</type>
    </fields>
    <label>Application Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>City__c</columns>
        <columns>Work_in_SF__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AMN-{000000}</displayFormat>
        <label>Application Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DOB_Required</fullName>
        <active>true</active>
        <description>Date of birth is required</description>
        <errorConditionFormula>IF(
  AND(ISBLANK(Date_of_Birth__c), NOT(ISPICKVAL(Type__c, &apos;Alternate Contact&apos;)))
  , true, false)</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Date of birth must be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_Required</fullName>
        <active>true</active>
        <description>First name is required for all application members</description>
        <errorConditionFormula>IF(ISBLANK(First_Name__c),true,false)</errorConditionFormula>
        <errorDisplayField>First_Name__c</errorDisplayField>
        <errorMessage>First name must be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Name_Required</fullName>
        <active>true</active>
        <description>Last name is required</description>
        <errorConditionFormula>IF(ISBLANK(Last_Name__c), true, false)</errorConditionFormula>
        <errorDisplayField>Last_Name__c</errorDisplayField>
        <errorMessage>Last name must be entered</errorMessage>
    </validationRules>
</CustomObject>